# backend/models/post.go
@@ -10,10 +10,10 @@ type ToggleLikeResponse struct {
 }
 
 type Post struct {
-	ID        uint      `gorm:"primaryKey"`
-	UserID    uint      `gorm:"not null;index"`
-	Caption   string    `gorm:"type:text"`
-	MediaURL  string    `gorm:"not null"`
-	Flagged   bool      `gorm:"default:false"` // NSFW content flag
-	CreatedAt time.Time `gorm:"autoCreateTime"`
+	ID        uint      `gorm:"primaryKey" json:"id"`
+	UserID    uint      `gorm:"not null;index" json:"user_id"`
+	Caption   string    `gorm:"type:text" json:"caption"`
+	MediaURL  string    `gorm:"not null" json:"media_url"`
+	Flagged   bool      `gorm:"default:false" json:"flagged"`
+	CreatedAt time.Time `gorm:"autoCreateTime" json:"created_at"`
 }
